post-trunk rebase fixes